smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/operations/operation-no-newline-after-properties.smithy
$version: "2.0"
namespace smithy.example

operation GetFoo { input: GetFooInput, output: GetFooOutput }

@input
structure GetFooInput {}

@output
structure GetFooOutput {}
