smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/inline-io/inline-structure-member.smithy
// Defining structures inline with the `:=` syntax may only be used when defining operation input and output shapes.
$version: "2.0"
namespace smithy.example

structure Structure {
    inlined := String
}
